--- a/Hibernate_HW/pom.xml
+++ b/Hibernate_HW/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.6.13.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>6.2.6</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
